// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineLinkLists renders lists of links 1`] = `
<div>
  <div
    class="ds-l-container"
  >
    <div
      class="hc-c-footer__site-links-row"
    >
      <ul
        class="hc-c-footer__list"
        role="list"
      >
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/contact-us"
          >
            footer.contactUs
          </a>
          <span
            aria-hidden="true"
            class="hc-c-footer__delimiter"
          />
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/archive"
          >
            footer.archive
          </a>
          <span
            aria-hidden="true"
            class="hc-c-footer__delimiter"
          />
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="http://www.cms.gov/About-CMS/Agency-Information/Aboutwebsite/CMSNondiscriminationNotice.html"
          >
            footer.a11y
          </a>
          <span
            aria-hidden="true"
            class="hc-c-footer__delimiter"
          />
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <button>
            Privacy Settings
          </button>
          <span
            aria-hidden="true"
            class="hc-c-footer__delimiter"
          />
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/privacy"
          >
            footer.privacyPolicy
          </a>
          <span
            aria-hidden="true"
            class="hc-c-footer__delimiter"
          />
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/using-this-site"
          >
            footer.usingThisSite
          </a>
        </li>
      </ul>
    </div>
    <div
      class="hc-c-footer__language-resource-links-row"
    >
      <h4
        class="ds-u-visibility--screen-reader"
        id="global-footer-language-resources"
      >
        Language resources
      </h4>
      <ul
        aria-labelledby="global-footer-language-resources"
        class="hc-c-footer__list"
        role="list"
      >
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#chinese"
            lang="zh"
          >
            中文
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#creole"
            lang="ht"
          >
            Kreyòl
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#french"
            lang="fr"
          >
            Français
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#german"
            lang="de"
          >
            Deutsch
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#gujarati"
            lang="gu"
          >
            ગુજરાતી
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#hindi"
            lang="hi"
          >
            हिंदी
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#italian"
            lang="it"
          >
            Italiano
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#japanese"
            lang="ja"
          >
            日本語
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#korean"
            lang="ko"
          >
            한국어
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#polish"
            lang="pl"
          >
            Polski
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#portuguese"
            lang="pt"
          >
            Português
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#russian"
            lang="ru"
          >
            Русский
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#spanish"
            lang="es"
          >
            Español
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#tagalog"
            lang="tl"
          >
            Tagalog
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="/language-resource/#vietnamese"
            lang="vi"
          >
            tiếng việt
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`InlineLinkLists renders lists of links with absolute URLs 1`] = `
<div>
  <div
    class="ds-l-container"
  >
    <div
      class="hc-c-footer__site-links-row"
    >
      <ul
        class="hc-c-footer__list"
        role="list"
      >
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/contact-us"
          >
            footer.contactUs
          </a>
          <span
            aria-hidden="true"
            class="hc-c-footer__delimiter"
          />
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/archive"
          >
            footer.archive
          </a>
          <span
            aria-hidden="true"
            class="hc-c-footer__delimiter"
          />
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="http://www.cms.gov/About-CMS/Agency-Information/Aboutwebsite/CMSNondiscriminationNotice.html"
          >
            footer.a11y
          </a>
          <span
            aria-hidden="true"
            class="hc-c-footer__delimiter"
          />
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <button>
            Privacy Settings
          </button>
          <span
            aria-hidden="true"
            class="hc-c-footer__delimiter"
          />
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/privacy"
          >
            footer.privacyPolicy
          </a>
          <span
            aria-hidden="true"
            class="hc-c-footer__delimiter"
          />
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/using-this-site"
          >
            footer.usingThisSite
          </a>
        </li>
      </ul>
    </div>
    <div
      class="hc-c-footer__language-resource-links-row"
    >
      <h4
        class="ds-u-visibility--screen-reader"
        id="global-footer-language-resources"
      >
        Language resources
      </h4>
      <ul
        aria-labelledby="global-footer-language-resources"
        class="hc-c-footer__list"
        role="list"
      >
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#chinese"
            lang="zh"
          >
            中文
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#creole"
            lang="ht"
          >
            Kreyòl
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#french"
            lang="fr"
          >
            Français
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#german"
            lang="de"
          >
            Deutsch
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#gujarati"
            lang="gu"
          >
            ગુજરાતી
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#hindi"
            lang="hi"
          >
            हिंदी
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#italian"
            lang="it"
          >
            Italiano
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#japanese"
            lang="ja"
          >
            日本語
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#korean"
            lang="ko"
          >
            한국어
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#polish"
            lang="pl"
          >
            Polski
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#portuguese"
            lang="pt"
          >
            Português
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#russian"
            lang="ru"
          >
            Русский
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#spanish"
            lang="es"
          >
            Español
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#tagalog"
            lang="tl"
          >
            Tagalog
          </a>
        </li>
        <li
          class="hc-c-footer__inline-item"
        >
          <a
            href="https://www.healthcare.gov/language-resource/#vietnamese"
            lang="vi"
          >
            tiếng việt
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
